[gd_scene load_steps=8 format=3 uid="uid://d30frdgfky0se"]

[ext_resource type="Script" path="res://content/Maps/level_01.gd" id="1_3esgi"]
[ext_resource type="PackedScene" uid="uid://bqwxq2ep08uq" path="res://content/Characters/Player/Player.tscn" id="1_ns17c"]
[ext_resource type="PackedScene" uid="uid://5w1xc3yyh178" path="res://content/Characters/Ball/ball.tscn" id="3_3d14k"]
[ext_resource type="PackedScene" uid="uid://cjg3c0dl0tbdj" path="res://content/Characters/Enemy/enemy_1.tscn" id="3_dofww"]
[ext_resource type="FontFile" uid="uid://buyygjfri0u11" path="res://addons/admob/assets/fonts/orange_juice_2_0.ttf" id="5_775bo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cshfn"]
size = Vector2(762.25, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1485t"]
size = Vector2(127.438, 1501.5)

[node name="Level01" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -640.0
offset_right = 361.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 3
mouse_filter = 2
script = ExtResource("1_3esgi")
metadata/_edit_vertical_guides_ = [360.0]
metadata/_edit_horizontal_guides_ = [640.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.152941, 0.164706, 1)

[node name="CanvasGroup" type="CanvasGroup" parent="."]

[node name="PlayerScore" type="Label" parent="CanvasGroup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 752.0
offset_right = 720.0
offset_bottom = 1191.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.359069, 0.359069, 0.359069, 1)
theme_override_fonts/font = ExtResource("5_775bo")
theme_override_font_sizes/font_size = 438
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyScore" type="Label" parent="CanvasGroup"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 714.0
offset_top = 528.0
offset_right = 1424.0
offset_bottom = 967.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
theme_override_colors/font_color = Color(0.360784, 0.360784, 0.360784, 1)
theme_override_fonts/font = ExtResource("5_775bo")
theme_override_font_sizes/font_size = 438
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Top" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
position = Vector2(359, -56)
shape = SubResource("RectangleShape2D_cshfn")

[node name="Bottom" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bottom"]
position = Vector2(359, 1336)
shape = SubResource("RectangleShape2D_cshfn")

[node name="Wall" type="StaticBody2D" parent="."]
position = Vector2(-8, 8)

[node name="left" type="CollisionShape2D" parent="Wall"]
position = Vector2(-57, 632)
shape = SubResource("RectangleShape2D_1485t")

[node name="right" type="CollisionShape2D" parent="Wall"]
position = Vector2(792, 632)
shape = SubResource("RectangleShape2D_1485t")

[node name="Player" parent="." instance=ExtResource("1_ns17c")]
z_index = 1
position = Vector2(359, 1248)

[node name="Enemy" parent="." instance=ExtResource("3_dofww")]
z_index = 1
position = Vector2(359, 24)

[node name="Ball" parent="." instance=ExtResource("3_3d14k")]
position = Vector2(359, 640)

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
